# gcl

./: README.md  index.html  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  App.vue  disable-inputs.ts  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  vibrancy.rs
src-tauri/src/vibrancy/: macos.rs  others.rs  windows.rs
